fix(cms): clean up redundant Security permitAll and modernize stream API
- Remove /cms/auth/login from requestMatchers (formLogin().permitAll() already covers it)
- Replace Collectors.toList() with .toList() (Java 16+ immutable list idiom)
- Fix test assertion: containsExactly → containsExactlyInAnyOrder (Set order not guaranteed)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>